Fixed the overflow issue on pricing page.

--- a/realhome/src/components/portfolio/Portfolio.module.css
+++ b/realhome/src/components/portfolio/Portfolio.module.css
@@ -134,3 +134,14 @@
     }
     
 }
+
+@media only screen 
+  and (min-width: 768px) 
+  and (max-height: 1024px) 
+  and (orientation: portrait) {
+
+    .tabs {
+        width: 45%;
+    }
+
+}
