--- a/realhome/src/components/pricing/Pricing.module.css
+++ b/realhome/src/components/pricing/Pricing.module.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    overflow: auto
 }
 
 .title {
